feat: added boilerplate sections

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,6 +3,7 @@
 		"target": "ES2020",
 		"module": "none", // treat files as non-modules (like <script> tags)
 		"allowJs": true, // include JS files
+		"checkJs": true, // check JS files
 		"lib": ["ES2020", "DOM"], // browser APIs + modern JS
 		"moduleResolution": "classic", // how browser script resolution works
 		"noEmit": true, // not compiling output
