--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,10 +4,12 @@
 		"module": "none", // treat files as non-modules (like <script> tags)
 		"allowJs": true, // include JS files
 		"checkJs": true, // check JS files
+		"noImplicitAny": false,
 		"lib": ["ES2020", "DOM"], // browser APIs + modern JS
 		"moduleResolution": "classic", // how browser script resolution works
 		"noEmit": true, // not compiling output
-		"strict": true
+		"strict": true,
+		"typeRoots": ["src/types", "node_modules/@types"]
 	},
-	"include": ["src/**/*.js"]
+	"include": ["src/**/*.js", "src/**/*.d.ts"]
 }
