--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   "license": "MIT",
   "type": "module",
   "devDependencies": {
+    "@types/d3": "^7.4.3",
     "@types/node": "^24.10.0",
     "@typescript-eslint/eslint-plugin": "^8.46.3",
     "@typescript-eslint/parser": "^8.46.3",
+    "chart.js": "^4.5.1",
     "concurrently": "^9.2.1",
     "esbuild": "^0.25.12",
     "esbuild-visualizer": "^0.7.0",
