--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,7 +35,7 @@ jobs:
         run: npm pack --dry-run
 
       - name: Publish to npm
-        run: npm publish
+        run: npm publish --access public
 
       - name: Delete tag on publish prep failure
         if: failure()
