--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 	],
 	"scripts": {
 		"start": "npm run package && node dist/main.js --metafile ./profile/meta.json --outreport ./profile/lazy-analyzer.html && open ./profile/lazy-analyzer.html",
-		"dev": "concurrently \"npm run build\" \"nodemon --watch src --enable-source-maps dist/main.js --metafile ./profile/meta.json --outmeta ./profile/lazy-analyzer.json --outreport ./profile/lazy-analyzer.html\" \"open ./profile/lazy-analyzer.html\"",
+		"dev": "concurrently \"npm run build\" \"nodemon --watch dist --enable-source-maps dist/main.js --metafile ./profile/meta.json --outmeta ./profile/lazy-analyzer.json --outreport ./profile/lazy-analyzer.html\" \"open ./profile/lazy-analyzer.html\"",
 		"build": "node esbuild.mjs --watch",
 		"package": "rm -rf dist && node esbuild.mjs --production",
 		"profile": "node esbuild.mjs && esbuild-visualizer --metadata ./profile/meta.json --filename ./profile/visualizer.html && open ./profile/visualizer.html",
