--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,1 +1,5 @@
 blank_issues_enabled: true
+contact_links:
+  - name: General Questions
+    url: https://github.com/alexanderdombroski/esbuild-lazy-analyzer/discussions
+    about: Ask general questions here.
