--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,6 +28,9 @@ jobs:
       - name: Install Dependencies
         run: npm ci
 
+      - name: Verify
+        run: npm run lint
+
       - name: Bundle Package
         run: npm run package
 
