--- a/package.json
+++ b/package.json
@@ -28,15 +28,17 @@
 	"type": "module",
 	"devDependencies": {
 		"@types/d3": "^7.4.3",
-		"@types/node": "^24.10.1",
-		"@typescript-eslint/eslint-plugin": "^8.48.1",
-		"@typescript-eslint/parser": "^8.48.1",
+		"@types/node": "^25.0.1",
+		"@typescript-eslint/eslint-plugin": "^8.49.0",
+		"@typescript-eslint/parser": "^8.49.0",
 		"chart.js": "^4.5.1",
 		"concurrently": "^9.2.1",
+		"cssnano": "^7.1.2",
 		"esbuild": "^0.27.1",
 		"esbuild-visualizer": "^0.7.0",
-		"eslint": "^9.39.1",
+		"eslint": "^9.39.2",
 		"eslint-plugin-import": "^2.32.0",
+		"htmlnano": "^2.1.5",
 		"husky": "^9.1.7",
 		"lint-staged": "^16.2.7",
 		"nodemon": "^3.1.11",
